Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  After Zope 3.2.1

    Bug fixes

      - Fixed issue 706: Session doesn't expire after aborting transaction.

      - Fixed issue 681: IFormFields is missing declaration for omit()

      - Fixed issue 665: ZCML swallowing KeyboardInterrupt / SystemExit.

      - Fixed issue 529: Undo Principal Transactions doesn't work with
        non-root principals

      - Fixed issue 636: Default ITraverser can't traverse old style
        classes

      - Fixed issue 638: TALES PathExpr calls result of alternate
        subexpression

      - Fixed issue 635: TALES PathExpr doesn't call old style classes

      - Fixed issue 543: add 'decimal'-package to
        zope/app/security/globalmodules.zcml

      - Change the session credentials plugin to make it configurable in which
	fields it looks for the credentials.

      - Fixed issue 590: zope.app.mail could send multiple copies of emails on
        ConflictErrors, and it was also rate limited to 1 email per second when
        you used QueuedMailDelivery.

      - SimpleInputWidget used to clear the widget's error as a side effect
        sometimes.

      - Fixed a bug in field prefix handling in formlib's setUp*Widgets.

      - Fixed issue 448, SingleDataHelper.hidden() raised a LookupError
        if there was no input value.
        
      - Fixed a bug in zope.publisher.http which raises a TypeError
        when using zserver and xmlrpc.

      - set socket-name to $INSTANCE_HOME/var/zopectlsock in
        zdaemon.conf.in, to prevent conflicts when running multiply
        instances or as root. the default was zdsock in the directory
        where zopectl is started from.

      - Fixed issue 586, BrowserResponse didn't update the